# DeckShuffleDraw

./: .gitignore  Cargo.toml  LICENSE  README.md  settings.default.toml
.github/workflows/: release.yml
src/: app.rs  image_loader.rs  main.rs  settings.rs
