[package]
name = "deck_shuffle_draw"
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/dustyghost/DeckShuffleDraw"
description = "Small Rust desktop app for drawing a random card from a configured deck"

[dependencies]
eframe = "0.33"
image = { version = "0.25", default-features = false, features = ["jpeg", "png"] }
rand = "0.9"
serde = { version = "1", features = ["derive"] }
toml = "0.9"
